# Palkia

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bindings/: CMakeLists.txt  main.cpp
include/: Archive.hpp  FileSystem.hpp  NitroArchive.hpp  NitroFS.h  NitroFS.hpp  NitroRom.h  NitroRom.hpp  Rom.hpp  UApplication.hpp  UCamera.hpp  UPalkiaApplication.hpp  UPalkiaContext.hpp  Util.hpp  bstream.h  util.h
include/Models/: NSBMD.hpp
include/NDS/Assets/: NCGR.hpp  NCLR.hpp  NSBMD.hpp  NSBTX.hpp
include/NDS/System/: Archive.hpp  Compression.hpp  FileSystem.hpp  Rom.hpp
include/System/: Archive.hpp  FileSystem.hpp  Rom.hpp
include/glad/: glad.h
lib/: CMakeLists.txt  imgui.cmake
src/: Archive.cpp  FileSystem.cpp  NitroArchive.cpp  NitroFS.cpp  NitroRom.cpp  Rom.cpp  UCamera.cpp  UPalkiaApplication.cpp  UPalkiaContext.cpp  Util.cpp  bstream.cpp  glad.c  main.cpp
src/Models/: NSBMD.cpp
src/NDS/Assets/: NCGR.cpp  NCLR.cpp  NSBMD.cpp  NSBTX.cpp
src/NDS/System/: Archive.cpp  Compression.cpp  FileSystem.cpp  Rom.cpp
src/System/: Archive.cpp  FileSystem.cpp  Rom.cpp
test/: main.cpp  tests.h
